Add PORTFOLIO files

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   </section>
   <section id = "hobbies">
     <h2 class = "hbbs">My Hobbies</h2>
-    <div class = "row">
+    <div class = "row haha">
       <div class = "col-lg-6 col-sm-12">
         <img class = "read" src = "https://media.giphy.com/media/8BS2RgwTl9Z7O/giphy.gif" />
         <h3 class = "reads">Reading</h3>
